--- a/nenga.html
+++ b/nenga.html
@@ -1,1 +1,36 @@
-
+<!DOCTYPE html>
+<html lang="ja">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>2025 デジタル年賀状</title>
+    <style>
+        body {
+            margin: 0;
+            background: #fafafa;
+            font-family: "Hiragino Sans", sans-serif;
+            text-align: center;
+        }
+        .container {
+            padding: 20px;
+        }
+        img {
+            max-width: 100%;
+            height: auto;
+            border-radius: 12px;
+            box-shadow: 0 4px 20px rgba(0,0,0,0.15);
+        }
+        .message {
+            margin-top: 20px;
+            font-size: 1.2rem;
+            color: #444;
+        }
+    </style>
+</head>
+<body>
+    <div class="container">
+        <img src="nenga.png" alt="年賀状">
+        <div class="message">あけましておめでとうございます</div>
+    </div>
+</body>
+</html>
