--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <input type="text" id="name-input" placeholder="名前">
     <button id="name-btn">決定</button>
 
-    <p class="privacy-note">※入力された名前は保存されません。個人情報は取得していません。</p>
+    <p class="privacy-note">※入力された名前は保存されません。</p>
 
 </div>
 
