福笑いゲーム

--- a/index.html
+++ b/index.html
@@ -35,6 +35,9 @@
             <p id="omikuji-result"></p>
         </div>
 
+        <a href="fukuwarai.html">福笑いゲームで遊ぶ</a>
+
+
     </main>
 </div>
 
