画像を追加

--- a/fukuwarai.html
+++ b/fukuwarai.html
@@ -11,8 +11,9 @@
     <div id="game-area">
         <img id="face" src="images/face.png" class="base">
 
-        <img id="eye-left" src="images/eye.png" class="part">
-        <img id="eye-right" src="images/eye.png" class="part">
+        <img id="eye-left" src="images/eye-left.png" class="part">
+        <img id="eye-right" src="images/eye-right.png" class="part">
+
         <img id="nose" src="images/nose.png" class="part">
         <img id="mouth" src="images/mouth.png" class="part">
     </div>
