--- a/fukuwarai.html
+++ b/fukuwarai.html
@@ -6,18 +6,23 @@
     <link rel="stylesheet" href="fukuwarai.css">
 </head>
 <body>
+    <button onclick="resetGame()">リセット</button>
 
     <div id="game-area">
+        <div id="hit-area"></div>
         <img id="face" src="images/face.png" class="base">
-
-        <!-- 顔の下に並べる初期位置 -->
-        <img id="eye-left"  src="images/eye-left.png"  class="part" data-x="40"  data-y="550">
-        <img id="eye-right" src="images/eye-right.png" class="part" data-x="140" data-y="550">
-        <img id="nose"      src="images/nose.png"     class="part" data-x="240" data-y="550">
-        <img id="mouth"     src="images/mouth.png"    class="part" data-x="340" data-y="550">
     </div>
 
-    <button onclick="resetGame()">リセット</button>
+
+    <div id="parts-area">
+        <img id="eye-left"  src="images/eye-left.png"  class="part">
+        <img id="eye-right" src="images/eye-right.png" class="part">
+        <img id="nose"      src="images/nose.png"     class="part">
+        <img id="mouth"     src="images/mouth.png"    class="part">
+    </div>
+
+    
+
 
     <script src="fukuwarai.js"></script>
 </body>
